In fgetpos() and fsetpos(), use ftello() and fseeko(), respectively, to avoid truncating the value stored in the fpos_t object operated on to that of a long integer; adresses PR lib/6637.