lib/libc/stdio/fsetpos.c
@@ -1,4 +1,4 @@
-/*	$NetBSD: fsetpos.c,v 1.8 1999/09/20 04:39:29 lukem Exp $	*/
+/*	$NetBSD: fsetpos.c,v 1.9 2000/07/08 13:51:27 kleink Exp $	*/
 
 /*-
  * Copyright (c) 1990, 1993
@@ -41,10 +41,11 @@
 #if 0
 static char sccsid[] = "@(#)fsetpos.c	8.1 (Berkeley) 6/4/93";
 #else
-__RCSID("$NetBSD: fsetpos.c,v 1.8 1999/09/20 04:39:29 lukem Exp $");
+__RCSID("$NetBSD: fsetpos.c,v 1.9 2000/07/08 13:51:27 kleink Exp $");
 #endif
 #endif /* LIBC_SCCS and not lint */
 
+#include "namespace.h"
 #include <assert.h>
 #include <errno.h>
 #include <stdio.h>
@@ -60,5 +61,5 @@ fsetpos(iop, pos)
 	_DIAGASSERT(iop != NULL);
 	_DIAGASSERT(pos != NULL);
 
-	return (fseek(iop, (long)*pos, SEEK_SET));
+	return (fseeko(iop, (off_t)*pos, SEEK_SET));
 }
